--- a/Front-end/app/build.gradle
+++ b/Front-end/app/build.gradle
@@ -37,7 +37,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
