chore: S3 의존성 추가

--- a/Back-end/SpringBootTemplate/build.gradle
+++ b/Back-end/SpringBootTemplate/build.gradle
@@ -40,11 +40,7 @@ dependencies {
 
     // DB
     runtimeOnly ('mysql:mysql-connector-java') //mysql8
-    //runtimeOnly 'mysql:mysql-connector-java:5.1.47' //mysql5
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa') //mysql 5버전의 경우 삭제.
-
-
 
     // Web
     implementation ('org.springframework.boot:spring-boot-starter-web')
@@ -57,9 +53,9 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
 
-
-
-
+    // s3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    testImplementation 'io.findify:s3mock_2.13:0.2.6'
 
 }
 
