--- a/Back-end/SpringBootTemplate/.gitignore
+++ b/Back-end/SpringBootTemplate/.gitignore
@@ -203,4 +203,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+application.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,windows,macos,gradle,git
