--- a/Front-end/app/build.gradle
+++ b/Front-end/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -33,6 +35,10 @@ android {
 
     viewBinding {
         enabled true
+    }
+
+    androidExtensions {
+        experimental true
     }
 }
 
